@@ -130,8 +130,10 @@ Change scale of users.
 \fB\-\-camera\-mode MODE\fR
 Camera mode (overview,track).
 .TP
-\fB\-\-hide\-users\fR
-Hide users.
+\fB\-\-hide DISPLAY_ELEMENT\fR
+Hide display element (date,users,files,tree,usernames,filenames,dirnames).
+
+Separate multiple elements with commas.
 .TP
 \fB\-\-hide\-tree\fR
 Hide tree.
