@@ -3,6 +3,7 @@
  * Username positions now scale correctly.
  * Simulation time no longer incremented while paused, counting towards file time lag.
  * M key now toggles mouse visibility.
+ * Added --hide option to use instead of multiple --hide-ELEMENT options.
 
 0.25:
  * Bazaar support (John Arbash Meinel).
